--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html class="no-js" lang="">
+<html class="no-js" lang="pt-br">
 
 <head>
   <meta charset="utf-8">
@@ -18,17 +18,33 @@
 </head>
 
 <body>
-  <!--[if IE]>
-    <p class="browserupgrade">You are using an <strong>outdated</strong> browser. Please <a href="https://browsehappy.com/">upgrade your browser</a> to improve your experience and security.</p>
-  <![endif]-->
+  <div class="container">
+    <header>
+        <h1>Controle de Portaria</h1>
+    </header>
 
-  <!-- Add your site or application content here -->
-  <p>Hello world! This is HTML5 Boilerplate.</p>
+    <form id="formulario">
+        <h2>Novo Visitante</h2>
+        <div>
+            <label for="InputCPF">CPF</label>
+            <input type="number" id="InputCPF" placeholder="CPF">
+        </div>
+        <div>
+            <label for="InputNome">Nome</label>
+            <input type="text" id="InputNome" placeholder="Nome">
+        </div>
+        <button type="submit" onclick="gravarVisitante()">Gravar</button>
+    </form>
+
+  </div>
+
+
   <script src="js/vendor/modernizr-3.7.1.min.js"></script>
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
   <script>window.jQuery || document.write('<script src="js/vendor/jquery-3.4.1.min.js"><\/script>')</script>
   <script src="js/plugins.js"></script>
   <script src="js/main.js"></script>
+  <script src="js/javascript.js"></script>
 
   <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
   <script>
