deslocamento do js para o document.read

--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
             <label for="InputNome">Nome</label>
             <input type="text" id="InputNome" placeholder="Nome">
         </div>
-        <button type="submit" onclick="gravarVisitante()">Gravar</button>
+        <button id="gravar" type="submit">Gravar</button>
     </form>
 
   </div>
