primeira versão funcionando

--- a/index.html
+++ b/index.html
@@ -33,7 +33,13 @@
             <label for="InputNome">Nome</label>
             <input type="text" id="InputNome" placeholder="Nome">
         </div>
-        <button id="gravar" type="submit">Gravar</button>
+        <div>
+          <button id="gravar" type="button">Gravar</button>
+          <button id="consultar" type="button">Consultar</button>
+        </div>
+        <div>
+          <p id="feedback"></p>
+        </div>
     </form>
 
   </div>
@@ -46,12 +52,6 @@
   <script src="js/main.js"></script>
   <script src="js/javascript.js"></script>
 
-  <!-- Google Analytics: change UA-XXXXX-Y to be your site's ID. -->
-  <script>
-    window.ga = function () { ga.q.push(arguments) }; ga.q = []; ga.l = +new Date;
-    ga('create', 'UA-XXXXX-Y', 'auto'); ga('set','transport','beacon'); ga('send', 'pageview')
-  </script>
-  <script src="https://www.google-analytics.com/analytics.js" async></script>
 </body>
 
 </html>
