--- a/index.html
+++ b/index.html
@@ -9,10 +9,10 @@
 
   <link rel="manifest" href="site.webmanifest">
   <link rel="apple-touch-icon" href="icon.png">
-  <!-- Place favicon.ico in the root directory -->
 
   <link rel="stylesheet" href="css/normalize.css">
   <link rel="stylesheet" href="css/main.css">
+  <link rel="stylesheet" href="css/stylesheet.css">
 
   <meta name="theme-color" content="#fafafa">
 </head>
@@ -23,22 +23,22 @@
         <h1>Controle de Portaria</h1>
     </header>
 
-    <form id="formulario">
-        <h2>Novo Visitante</h2>
+    <form id="formulario" class="form">
+        <h2 class="form__title">Novo Visitante</h2>
         <div>
             <label for="InputCPF">CPF</label>
-            <input type="number" id="InputCPF" placeholder="CPF">
+            <input type="number" id="InputCPF" placeholder="CPF" class="form__field">
         </div>
         <div>
             <label for="InputNome">Nome</label>
-            <input type="text" id="InputNome" placeholder="Nome">
+            <input type="text" id="InputNome" placeholder="Nome" class="form__field">
         </div>
         <div>
-          <button id="gravar" type="button">Gravar</button>
-          <button id="consultar" type="button">Consultar</button>
+          <button id="gravar" type="button" class="form__button--insert">Gravar</button>
+          <button id="consultar" type="button" class="form__button--select">Consultar</button>
         </div>
         <div>
-          <p id="feedback"></p>
+          <p id="feedback" class="form__text--sucessfull"></p>
         </div>
     </form>
 
