--- a/src/index.html
+++ b/src/index.html
@@ -51,6 +51,18 @@
   </div>
 
   <script src="https://code.jquery.com/jquery-3.4.1.min.js" integrity="sha256-CSXorXvZcTkaix6Yvo6HppcZGetbYMGWSFlBw8HfCJo=" crossorigin="anonymous"></script>
+
+  <script>
+      if ('serviceWorker' in navigator) {
+        window.addEventListener('load', () => {
+          navigator.serviceWorker.register('/service-worker.js')
+              .then((reg) => {
+                console.log('Service worker registrado com sucesso :) !', reg);
+              });
+        });
+      }
+  </script>  
+
 </body>
 
 </html>
